client/src/components/pages/Home.css
.mainContainer {
  padding: 0 50px 5px 10px;
  justify-content: center;
  /* text-align: center; */
}

.post {
  width: 80%;
  max-width: 850px;
  margin: 20px auto 0;
  padding-top: 30px;
  background: rgba(174, 172, 212, 0.3);
}

.info {
  width: 80%;
  margin: auto;
  height: 50px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  align-items: center;
}

.user {
  display: flex;
  align-items: centre;
}

.user-profile-pic {
  height: 40px;
  width: 40px;
  padding: 0;
  object-fit: cover;
  border-radius: 50%;
}

.username {
  width: auto;
  height: 50px;
  font-size: 14px;
  font-weight: bold;
  padding-top: 10px;
}

.post-content {
  width: 100%;
  padding: 5px;
  display: flex;
  justify-content: center;
}

.post-image {
  width: 100%;
  max-width: 600px;
  height: 600px;
  object-fit: cover;
  object-position: center;
}

.post--section {
  width: 80%;
  margin: auto;
}

.reaction-container {
  height: 50px;
  margin: auto;
  display: flex;
  align-items: center;
}

.button-bookmark-icon {
  background-color: white;
  border: none;
}

.button-bookmark-icon:focus {
  color: lightskyblue;
  border: none;
}

.comment {
  width: 100%;
  font-size: 13px;
  /* border: 5px solid black; */
  /* border-radius: 25px; */
  padding-top: 4px;
  padding-left: 0px;
  align-content: stretch;
  align-items: stretch;
}

.comment-content {
  /* border: 4px solid green; */
  padding-left: 0px;
  padding-right: 0px;
  padding-bottom: 0px;
  height: 100%;
  width: 100%;
  display: flex;
  align-items: top;
  justify-content: space-between;
}

.comment-follower {
  /* border: 4px solid salmon; */
  display: flex;
  padding-bottom: 0;
  width: 100%;
  /* display: flex; */
}

.comment-follower-profile-pic {
  height: 30px;
  width: 30px;
  padding: 0;
  object-fit: cover;
  border-radius: 50%;
}

.comment-follower-username {
  /* border: 4px solid greenyellow; */
  font-size: 13px;
  text-align: left;
  padding-left: 0px;
  margin-top: 0px;
}

.comment-created {
  font-size: 9px;
  height: 18px;
  /* border: 4px solid blue; */
}

.button-delete-comment-container {
  /* border: 3px solid lightpink; */
  padding-left: 0px;
  padding-right: 0px;
}

.button-delete-comment {
  background-color: white;
  border: none;
  font-size: 15px;
}

@media (min-width: 320px) and (max-width: 480px) {
  .outerContainer {
    height: 100%;
  }

  .container {
    width: 100%;
    height: 100%;
  }
}

@media (min-width: 480px) and (max-width: 1200px) {
  .container {
    width: 60%;
  }
}

